modified for monchrome, untested

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,10 @@ platform = nordicnrf52
 board = adafruit_feather_nrf52840
 framework = arduino
 
-; Library dependencies for ST7306 8-color display with LVGL
+; Library dependencies for ST7306 monochrome display with Adafruit GFX
 lib_deps = 
-    lvgl/lvgl@^8.3.11
-    
-; Build flags for LVGL configuration
-build_flags = 
-    -D LV_CONF_INCLUDE_SIMPLE
-    -I include
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/Adafruit BusIO@^1.16.1
     
 ; Monitor settings
 monitor_speed = 115200
