--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:adafruit_feather_nrf52840]
-platform = nordicnrf52
-board = adafruit_feather_nrf52840
+[env:adafruit_feather_m4]
+platform = atmelsam
+board = adafruit_feather_m4
 framework = arduino
 
-; Library dependencies for ST7306 monochrome display with Adafruit GFX
+; Library dependencies for ST7305 monochrome display with Adafruit GFX
 lib_deps = 
     adafruit/Adafruit GFX Library@^1.11.9
     adafruit/Adafruit BusIO@^1.16.1
